...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="ywP-gL-hCh">
                    <rect key="frame" x="8" y="59" width="377" height="56"/>
                    <textInputTraits key="textInputTraits"/>
                    <scopeButtonTitles>
                        <string>Title</string>
                        <string>Title</string>
                    </scopeButtonTitles>
...
