...
    func setFavoriteButton()
    func showMessage(_ message: String)
    func showRemoveFavoriteAlert()
}

enum FavoriteState {
    case favorite
    case unFavorite
}

final class DetailViewController: UIViewController {
    
    // MARK: - IBOutlets
...
