...
    private let emptyView = EmptyView()
    
    // MARK: - Override Functions
    override func viewDidLoad() {
        super.viewDidLoad()
        presenter.viewDidLoad()
        navigationItem.title = "iTunes Search"
    }
    
    override func viewDidDisappear(_ animated: Bool) {
        presenter.stopMusic()
    }
    
...
